<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- <groupId>net.risesoft</groupId> -->
    <artifactId>risenet-y9boot-webapp-flowableui</artifactId>
    <packaging>war</packaging>

    <parent>
        <groupId>net.risesoft</groupId>
        <artifactId>y9-module-flowableui</artifactId>
        <version>v9.7.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.deploy.skip>true</maven.deploy.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-idgenerator</artifactId>
            <version>${project.version}</version>
        </dependency>


        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-properties</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-security</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-log</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-jpa-public</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-jpa-tenant</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-support-file-service-ftp</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-sso-oauth2-resource</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-mongo-public</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-health</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-api-feignclient-platform</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-api-feignclient-todo</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-api-feignclient-itemadmin</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-api-feignclient-processadmin</artifactId>
            <version>${project.version}</version>
        </dependency>

       <!--  <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-api-feignclient-email</artifactId>
            <version>${project.version}</version>
        </dependency> -->

        <!-- <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-rest-httpclient</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency> -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-starter-web</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.risesoft</groupId>
            <artifactId>risenet-y9boot-common-nacos</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet.jsp.jstl</groupId>
            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>

        <dependency>
            <groupId>com.jxl</groupId>
            <artifactId>jxl</artifactId>
            <version>2.6</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
        <dependency>
            <groupId>com.belerweb</groupId>
            <artifactId>pinyin4j</artifactId>
            <version>2.5.1</version>
        </dependency>

        <dependency>
            <groupId>cn.songxinqiang</groupId>
            <artifactId>com.baidu.ueditor</artifactId>
            <version>1.1.2-offical</version>
        </dependency>
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.20</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>5.2.3</version>
        </dependency>

        <dependency>
            <groupId>com.deepoove</groupId>
            <artifactId>poi-tl</artifactId>
            <version>1.12.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-schemas</artifactId>
            <version>4.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.3</version>
        </dependency>

        <dependency>
            <groupId>cn.wps.yun</groupId>
            <artifactId>graph-java-client</artifactId>
            <version>1.0.11</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>flowableUI</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            com.ly.smart-doc
                                        </groupId>
                                        <artifactId>
                                            smart-doc-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [2.4.8,)
                                        </versionRange>
                                        <goals>
                                            <goal>html</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>build-docker-image</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.cloud.tools</groupId>
                        <artifactId>jib-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>api-doc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.ly.smart-doc</groupId>
                        <artifactId>smart-doc-maven-plugin</artifactId>
                        <configuration>
                            <projectName>flowableUI</projectName>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
